--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-Vision Experiment Manager was developed in Botond Roska's lab in Friedrich Miescher Instiute.
+Vision Experiment Manager was developed in Botond Roska's lab in Friedrich Miescher Instiute from 2011.
