--- a/README
+++ b/README
@@ -1,1 +1,6 @@
-Vision Experiment Manager was developed in Botond Roska's lab in Friedrich Miescher Instiute from 2011.
+Vision Experiment Manager was developed in Botond Roska's lab in Friedrich Miescher Instiute and Institute of Molecular and Clinical Ophthalmology Basel from 2011.
+
+Two Photon GUI Development Guide
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+
