Stage control embedded into scanner control process

--- a/ca_imaging_analysis.ipynb
+++ b/ca_imaging_analysis.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "4dd566e0",
+   "id": "b3ff79ce",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "9730b999",
+   "id": "72a00999",
    "metadata": {},
    "outputs": [
     {
@@ -29,9 +29,10 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "    From hdf5 file containing raw pmt signal and scanner position signals, 2p image is reconstructed\n",
-      "    Distortion coming from scanner motion is corrected. Each x scanner sweep's position signal is used for \n",
-      "    generating an interpolatio\n",
+      "    2p image is reconstructed from hdf5 file containing raw pmt signal and scanner position signals\n",
+      "    Distortion coming from scanner motion is corrected. Position signal of each sweep of x scanner is\n",
+      "    individually processed and the corresponding image line is calculated. This ensures that motion transients\n",
+      "    are also taken into account.\n",
       "    \n",
       "    fcut: cutting frequency of low pass filter applied on pmt signal\n",
       "    \n"
@@ -45,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "e9a061ab",
+   "id": "93ca89c9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "b966c72b",
+   "id": "6f03dc17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "3d966d7f",
+   "id": "dbcbf617",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,13 +76,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "69f79945",
+   "id": "5250a8b6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x2230a6991c0>"
+       "<matplotlib.image.AxesImage at 0x1d1be26f070>"
       ]
      },
      "execution_count": 6,
@@ -108,13 +109,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "23f1747a",
+   "id": "00d9ff54",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x2230a8fa1f0>"
+       "<matplotlib.image.AxesImage at 0x1d1d13d8220>"
       ]
      },
      "execution_count": 7,
